--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </h3>
         <br>
         <br>
-        <img src="image/Judge-dani.jpg" id="img2">
+        <img src="image/Judge-Dani.jpg" id="img2">
         <br>
         <h1>
           Dani Hiswani
@@ -74,7 +74,7 @@
         </h3>
         <br>
         <br>
-        <img src="image/Judge-bosco.jpg" id="img3">
+        <img src="image/Judge-Bosco.jpg" id="img3">
         <br>
         <h1>
           Bosco Martis
